# query-pilot

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: alarms.py  datasets.py  metrics.py  queries.py  reports.py  router.py
backend/app/models/: alarm.py  conversation.py  database.py  dataset.py  report.py
backend/app/prompts/: text_to_sql.py
backend/app/providers/: anthropic_provider.py  base.py  openai_provider.py
backend/app/schemas/: alarm.py  dataset.py  metric.py  query.py  report.py
backend/app/services/: alarm_service.py  dataset_service.py  duckdb_service.py  llm_service.py  neo4j_service.py  report_service.py  scheduler_service.py  text_to_sql.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: alarms.ts  client.ts  conversations.ts  datasets.ts  metrics.ts  reports.ts
frontend/src/components/chat/: ChartRenderer.tsx  ChatInterface.tsx  ConversationList.tsx  MessageBubble.tsx  ResultTable.tsx  SqlBlock.tsx
frontend/src/components/datasets/: DatasetCard.tsx  DatasetPreviewModal.tsx  DatasetUpload.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/metrics/: MetricForm.tsx  MetricTree.tsx
frontend/src/hooks/: useAlarms.ts  useConversations.ts  useDatasets.ts  useMetrics.ts  useReports.ts
frontend/src/pages/: AlarmsPage.tsx  ChatPage.tsx  DatasetsPage.tsx  MetricsPage.tsx  ReportsPage.tsx
frontend/src/types/: index.ts
