[project]
name = "querypilot"
version = "0.1.0"
description = "Single-user data analytics platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "duckdb>=1.1.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "neo4j>=5.26.0",
    "apscheduler>=3.10.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
